--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,3 +20,16 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
+  check-formatting:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 23
+      uses: actions/setup-java@v4
+      with:
+        java-version: '23'
+        distribution: 'temurin'
+        cache: maven
+    - name: Check formatting
+      run: mvn -B spotless:check --file pet-clinic/pom.xml
